# Projeto-web-

./: README.md  cadastro.py  clientes.csv  pyproject.toml
pages/: Consulta.py
